--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,7 +46,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: cd client
-    - run: yarn install
-    - run: yarn build
-    - run: yarn test
+    - run: cd client && yarn install
+    - run: cd client && yarn build
+    - run: cd client && yarn test
