--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn install
-    - run: yarn build
-    - run: yarn test
+    - run: cd backend && yarn install
+    - run: cd backend && yarn build
+    - run: cd backend && yarn test
 
   frontend-build:
 
@@ -46,6 +46,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: cd client && yarn install
-    - run: cd client && yarn build
-    - run: cd client && yarn test
+    - run: cd frontend && yarn install
+    - run: cd frontend && yarn build
+    - run: cd frontend && yarn test
