--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,26 +10,6 @@ on:
     branches: [ main ]
 
 jobs:
-  backend-build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-    - run: cd backend && yarn install
-    - run: cd backend && yarn build
-    - run: cd backend && yarn test
-
   frontend-build:
 
     runs-on: ubuntu-latest
@@ -41,11 +21,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: cd client && Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: cd frontend && yarn install
-    - run: cd frontend && yarn build
-    - run: cd frontend && yarn test
+    - run: cd client && yarn install
+    - run: cd client && yarn build
+    - run: cd client && yarn test
+    
+  backend-build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: cd server && Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - run: cd server && yarn install
+    - run: cd server && yarn build
+    - run: cd server && yarn test
+
+  
