--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "14.x"
+    "node": "14.17.4"
   },
   "scripts": {
     "heroku-postbuild": "cd client && yarn install --frozen-lockfile && yarn build && cd ../server && yarn install --frozen-lockfile && yarn start"
