--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "scripts": {
-    "heroku-postbuild": "cd client && yarn build && cd ../server && yarn start"
+    "build": "yarn workspaces foreach run build",
+    "start": "yarn workspaces server start"
   }
 }
