--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "scripts": {
     "build": "yarn workspaces foreach run build",
     "start": "yarn workspaces server start"
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
