--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "scripts": {
+    "heroku-prebuild": "yarn plugin import workspaces-tools",
     "build": "yarn workspaces foreach run build",
     "start": "yarn workspaces server start"
   },
