--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
         "test": "jest"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
