feat: added yarn dev script

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "heroku-prebuild": "yarn plugin import workspace-tools",
     "build": "yarn workspaces foreach run build",
-    "start": "yarn workspace server start"
+    "start": "yarn workspace server start",
+    "dev": "yarn workspace client dev & yarn workspace server dev"
   },
   "packageManager": "yarn@3.0.0"
 }
