--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node .",
-        "dev": "tsc & nodemon --trace-warnings .",
+        "dev": "ts-node-dev --respawn -- src/index.ts",
         "test": "jest"
     },
     "dependencies": {
@@ -34,6 +34,7 @@
         "prettier": "^2.3.2",
         "ts-jest": "^27.0.4",
         "ts-node": "^10.1.0",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     }
 }
