--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: GitHub Checks
       uses: LouisBrunner/checks-action@v1.1.2
-      if: always()
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        name: Test XYZ
+        name: Test Frontend
         conclusion: ${{ job.status }}
-        output: |
-          {"summary":${{ steps.test.outputs.summary }}}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -49,6 +46,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: GitHub Checks
+      uses: LouisBrunner/checks-action@v1.1.2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        name: Test Frontend
+        conclusion: ${{ job.status }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
