--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,4 +50,24 @@ jobs:
     - run: yarn workspace server build
     - run: yarn workspace server test
 
+  deploy-test:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - run: yarn plugin import workspace-tools
+    - run: yarn workspaces foreach run build
+    - run: yarn workspace server start
+
   
