--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,6 +67,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - run: yarn plugin import workspace-tools
+    - run: yarn
     - run: yarn workspaces foreach run build
     - run: yarn workspace server start
 
