--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,8 @@ yarn-error.log*
 # yarn v2
 .yarn/*
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
+.pnp.*
