--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "mongoose": "^6.0.2",
         "path": "^0.12.7"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^26.0.24",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^16.4.13",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
