--- a/.gitignore
+++ b/.gitignore
@@ -126,9 +126,9 @@ yarn-error.log*
 
 # yarn v2
 .yarn/*
-!.yarn/cache
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
+.pnp.*
