--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "start": "yarn workspace server start",
     "dev": "yarn workspace client dev & yarn workspace server dev"
   },
-  "packageManager": "yarn@3.0.0"
+  "packageManager": "yarn@3.0.0",
+  "dependencies": {
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
+  }
 }
