--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "mongoose": "^6.0.2",
+        "passport": "^0.4.1",
         "path": "^0.12.7"
     },
     "devDependencies": {
