--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34"
+    "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.11",
+    "supertest": "^6.1.6"
   }
 }
