--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
+    "mongodb-memory-server": "^7.4.0",
     "supertest": "^6.1.6"
   }
 }
