--- a/server/package.json
+++ b/server/package.json
@@ -17,20 +17,31 @@
         "coverage": false
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.2",
         "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "path": "^0.12.7"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^26.0.24",
         "@types/mongodb-memory-server": "^2.3.0",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^16.4.13",
+        "@types/passport": "^1.0.7",
+        "@types/passport-jwt": "^3.0.6",
+        "@types/passport-local": "^1.0.34",
+        "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
         "eslint": "^7.32.0",
@@ -38,8 +49,10 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-security": "^1.4.0",
         "jest": "^27.0.6",
+        "mongodb-memory-server": "^7.4.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.3.2",
+        "supertest": "^6.1.6",
         "ts-jest": "^27.0.4",
         "ts-node": "^10.1.0",
         "ts-node-dev": "^1.1.8",
