--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^26.0.24",
+        "@types/mongodb": "^4.0.7",
         "@types/mongodb-memory-server": "^2.3.0",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^16.4.13",
