--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
+        "@types/superagent": "^4.1.12",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
@@ -53,6 +54,7 @@
         "mongodb-memory-server": "^7.4.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.3.2",
+        "superagent": "^6.1.0",
         "supertest": "^6.1.6",
         "ts-jest": "^27.0.4",
         "ts-node": "^10.1.0",
