--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@redux-offline/redux-offline": "^2.6.0",
         "@reduxjs/toolkit": "^1.6.1",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -27,7 +28,6 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
-        "redux-offline": "^2.0.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
         "typescript": "^4.0.3",
