--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "@types/react-router-dom": "^5.1.8",
         "@typescript-eslint/eslint-plugin": "^4.29.2",
         "@typescript-eslint/parser": "^4.29.2",
+        "axios": "^0.21.4",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.1",
