--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "packageManager": "yarn@3.0.0",
   "dependencies": {
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3"
+    "semantic-ui-react": "^2.0.3",
+    "yarn": "^1.22.11"
   }
 }
