--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "cookie-parser": "^1.4.5",
-    "react-beautiful-dnd": "^13.1.0"
+    "react-beautiful-dnd": "^13.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
