--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@reduxjs/toolkit": "^1.6.1",
     "cookie-parser": "^1.4.5",
     "react-beautiful-dnd": "^13.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
-    "@types/react-beautiful-dnd": "^13.1.2"
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/uuid": "^8.3.1"
   }
 }
