--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
     "scripts": {
         "dev": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=node",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
