--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
+        "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.8",
+        "@types/uuidv4": "^5.0.0",
         "@typescript-eslint/eslint-plugin": "^4.29.2",
         "@typescript-eslint/parser": "^4.29.2",
         "axios": "^0.21.4",
