--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-security": "^1.4.0",
         "prettier": "^2.3.2",
         "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.2.0",
@@ -35,6 +36,7 @@
         "semantic-ui-react": "^2.0.3",
         "typescript": "^4.0.3",
         "typescript-plugin-css-modules": "^3.4.0",
+        "uuidv4": "^6.2.12",
         "web-vitals": "^0.2.4",
         "workbox-background-sync": "^5.1.3",
         "workbox-broadcast-update": "^5.1.3",
