--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.8",
-        "@types/uuidv4": "^5.0.0",
+        "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.29.2",
         "@typescript-eslint/parser": "^4.29.2",
         "axios": "^0.21.4",
@@ -36,7 +36,7 @@
         "semantic-ui-react": "^2.0.3",
         "typescript": "^4.0.3",
         "typescript-plugin-css-modules": "^3.4.0",
-        "uuidv4": "^6.2.12",
+        "uuid": "^8.3.2",
         "web-vitals": "^0.2.4",
         "workbox-background-sync": "^5.1.3",
         "workbox-broadcast-update": "^5.1.3",
