fix: remove dev deps in workspace root

--- a/package.json
+++ b/package.json
@@ -20,9 +20,5 @@
     "start": "yarn workspace server start",
     "dev": "yarn workspace client dev & yarn workspace server dev"
   },
-  "packageManager": "yarn@3.0.0",
-  "devDependencies": {
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
-  }
+  "packageManager": "yarn@3.0.0"
 }
