--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "yarn": "3.0.0"
   },
   "workspaces": {
     "packages": [
