--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-          with:
-            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: "comp30022-crm-app" #Must be unique in Heroku
-            heroku_email: "daniel.a.digby@gmail.com"
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "comp30022-crm-app" #Must be unique in Heroku
+          heroku_email: "daniel.a.digby@gmail.com"
