fix: correct wait for check markers

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,36 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for tests to pass
+      - name: Wait for backend build
         uses: fountainhead/action-wait-for-check@v1.0.0
         id: wait-for-tests-passed
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: build_and_test
+          checkName: backend-build (14.x)
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+      - name: Wait for backend tests
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-tests-passed
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: backend-tests (14.x)
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+      - name: Wait for frontend build
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-tests-passed
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: frontend-build (14.x)
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+      - name: Wait for frontend tests
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-tests-passed
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: frontend-tests (14.x)
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Checkout
