--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,14 @@
         "coverage": false
     },
     "dependencies": {
+        "@types/joi": "^17.2.3",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
+        "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.2",
         "passport": "^0.4.1",
