--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "sanitize": "^2.1.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
