--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-rate-limit": "^5.4.1",
         "helmet": "^4.6.0",
         "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
@@ -31,6 +32,8 @@
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "path": "^0.12.7",
+        "rate-limiter-flexible": "^2.3.1",
+        "redis": "^3.1.2",
         "sanitize": "^2.1.0"
     },
     "devDependencies": {
@@ -46,6 +49,7 @@
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
+        "@types/redis": "^2.8.32",
         "@types/superagent": "^4.1.12",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
@@ -58,6 +62,7 @@
         "mongodb-memory-server": "^7.4.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.3.2",
+        "redis-mock": "^0.56.3",
         "superagent": "^6.1.0",
         "supertest": "^6.1.6",
         "ts-jest": "^27.0.4",
