--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 #####################
 ## BASE INSTALL STAGE
-FROM node:lts AS install
+FROM node:lts AS install-base
 WORKDIR /usr/src/
 COPY .yarn ./.yarn
 COPY .yarnrc.yml .
@@ -10,10 +10,17 @@ COPY package.json .
 # copy and install all workspace packages
 RUN yarn plugin import workspace-tools
 
-FROM install AS develop
-COPY . .
-RUN yarn install
+# DEVELOPMENT BUILD
+FROM install-base AS develop-server
+COPY ./server ./server
+RUN yarn workspace server install
+
+EXPOSE 8080
+CMD ["yarn", "workspace", "server", "dev"]
+
+FROM install-base AS develop-client
+COPY ./client ./client
+RUN yarn workspace client install
 
 EXPOSE 3000
-EXPOSE 8080
-CMD ["yarn", "local"]
+CMD ["yarn", "workspace", "client", "dev"]
