--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "client",
-    "proxy": "http://localhost:8080",
+    "proxy": "http://server:8080",
     "homepage": ".",
     "version": "0.1.0",
     "private": true,
