--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "heroku-prebuild": "yarn plugin import workspace-tools",
     "build": "yarn workspaces foreach run build",
     "start": "yarn workspace server start",
-    "local": "yarn workspace client dev & yarn workspace server dev",
-    "build-dev": "yarn install && COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose build",
-    "dev": "docker-compose -p 'cara' up"
+    "dev": "yarn workspace client dev & yarn workspace server dev",
+    "image": "yarn install && COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose build",
+    "container": "docker-compose -p 'cara' up",
+    "down": "docker-compose down"
   },
   "packageManager": "yarn@3.0.0"
 }
