--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
     "name": "client",
-    "proxy": "http://server:8080",
     "homepage": ".",
     "version": "0.1.0",
     "private": true,
@@ -25,6 +24,7 @@
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-security": "^1.4.0",
+        "http-proxy-middleware": "^2.0.1",
         "prettier": "^2.3.2",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
