--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "yarn workspace server start",
     "dev": "yarn workspace client dev & yarn workspace server dev",
     "image": "yarn install && COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose build",
-    "container": "docker-compose -p 'cara' up",
+    "docker": "docker-compose -p 'cara' up",
     "down": "docker-compose down"
   },
   "packageManager": "yarn@3.0.0"
