--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "@types/jest": "^26.0.15",
+        "@types/lodash": "^4.14.175",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-beautiful-dnd": "^13.1.2",
@@ -25,6 +26,7 @@
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-security": "^1.4.0",
+        "lodash": "^4.17.21",
         "prettier": "^2.3.2",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
