feat: update app manifest description

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Cara",
-    "name": "Cara",
+    "short_name": "cara",
+    "name": "cara",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
