--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.8",
+        "@types/redux-persist": "^4.3.1",
         "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.29.2",
         "@typescript-eslint/parser": "^4.29.2",
@@ -34,6 +35,8 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "redux-offline": "^2.0.0",
+        "redux-persist": "^6.0.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
         "typescript": "^4.0.3",
