--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "@types/jest": "^26.0.15",
         "@types/lodash": "^4.14.175",
         "@types/node": "^12.0.0",
+        "@types/random-name": "^0.1.0",
         "@types/react": "^16.9.53",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^16.9.8",
@@ -29,6 +30,7 @@
         "http-proxy-middleware": "^2.0.1",
         "lodash": "^4.17.21",
         "prettier": "^2.3.2",
+        "random-name": "^0.1.2",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
