--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-security": "^1.4.0",
+        "firebase": "^9.1.2",
         "http-proxy-middleware": "^2.0.1",
         "lodash": "^4.17.21",
         "prettier": "^2.3.2",
