--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "docker": "docker-compose -p 'cara' up",
     "down": "docker-compose down"
   },
-  "packageManager": "yarn@3.0.0"
+  "packageManager": "yarn@3.0.0",
+  "dependencies": {},
+  "devDependencies": {
+    "framer-motion": "^4.1.17"
+  }
 }
