--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-security": "^1.4.0",
         "firebase": "^9.1.2",
+        "framer-motion": "^4.1.17",
         "http-proxy-middleware": "^2.0.1",
         "lodash": "^4.17.21",
         "prettier": "^2.3.2",
