--- a/package.json
+++ b/package.json
@@ -24,8 +24,5 @@
     "docker": "docker-compose -p 'cara' up",
     "down": "docker-compose down"
   },
-  "packageManager": "yarn@3.0.0",
-  "devDependencies": {
-    "framer-motion": "^4.1.17"
-  }
+  "packageManager": "yarn@3.0.0"
 }
