--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-textarea-autosize": "^8.3.3",
         "redux-offline": "^2.0.0",
         "redux-persist": "^6.0.0",
         "semantic-ui-css": "^2.4.1",
