--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
         "react-textarea-autosize": "^8.3.3",
         "redux-offline": "^2.0.0",
         "redux-persist": "^6.0.0",
+        "semantic-ui-calendar-react": "^0.15.3",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
         "typescript": "^4.0.3",
