--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   "packageManager": "yarn@3.0.0",
   "devDependencies": {
     "cypress": "^8.6.0",
-    "typescript": "^4.4.4"
+    "mongoose": "^6.0.11"
   }
 }
