--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,5 +12,5 @@
             "*": ["node_modules/*"]
         }
     },
-    "include": ["src/**/*", "../cypress/database/integrationUtils.js"]
+    "include": ["src/**/*"]
 }
